Создано с помощью Colaboratory

--- a/130321_add_dictionaries.ipynb
+++ b/130321_add_dictionaries.ipynb
@@ -6,7 +6,7 @@
       "name": "130321_add_dictionaries.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN7Ew2W41LCMb1v7ik7K2GT",
+      "authorship_tag": "ABX9TyOFIQMZMqn9LiuQbey4cxMs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "APRoJKrSmSCF",
-        "outputId": "13705ee5-a8d5-43cb-e854-d9d2410163b5"
+        "outputId": "9d3a5de3-b425-459c-ff9f-56803385789f"
       },
       "source": [
         "from google.colab import drive\n",
@@ -101,13 +101,13 @@
       },
       "source": [
         "#open the table you want to change\n",
-        "xls = pd.ExcelFile('/content/drive/MyDrive/Translocations/H1N1_H3N2.1557.AA.aligned.1str_pdb_multiple.xlsx')\n",
+        "xls = pd.ExcelFile('/content/drive/MyDrive/Translocations/H3N2_evolver_stats.xlsx')\n",
         "df1 = pd.read_excel(xls, 'len=1')\n",
         "df2 = pd.read_excel(xls, 'len=2')\n",
         "df3 = pd.read_excel(xls, 'len=3')\n",
         "df4 = pd.read_excel(xls, 'len=4')"
       ],
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
       "source": [
         "df_list = [df1, df2, df3, df4]"
       ],
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -134,53 +134,53 @@
         "  for index1, row1 in df.iterrows(): #iterate through correlating pairs in dataframe\n",
         "      d_state = {} #create an empty dictionary for the pair we're lookinng at \n",
         "\n",
-        "      if int(row1[state]) != 0:\n",
+        "      #if int(row1[state]) != 0:\n",
         "\n",
-        "        p1 = int(row1['pos1'])\n",
-        "        p2 = int(row1['pos2'])\n",
-        "        kmer = row1['kmer']\n",
+        "      p1 = int(row1['pos1'])\n",
+        "      p2 = int(row1['pos2'])\n",
+        "      kmer = row1['kmer']\n",
         "\n",
-        "        with open(file, \"rU\") as handle:  \n",
-        "          for record in SeqIO.parse(handle, \"fasta\"): #iterating through sequences in the alignment file\n",
-        "            test_str = str(record.seq) #test_str – one sequence; res – list of kmers of particular length k\n",
+        "      with open(file, \"rU\") as handle:  \n",
+        "        for record in SeqIO.parse(handle, \"fasta\"): #iterating through sequences in the alignment file\n",
+        "          test_str = str(record.seq) #test_str – one sequence; res – list of kmers of particular length k\n",
         "\n",
-        "            pos1_kmer = test_str[p1-1:p1+k-1] #find \"translocation\" kmer-1 of this pair i a particular sequence of the alignment\n",
-        "            pos2_kmer = test_str[p2-1:p2+k-1] #find \"translocation\" kmer-2 of this pair i a particular sequence of the alignment\n",
-        "            pair = pos1_kmer + '_' + pos2_kmer #form a pair \n",
+        "          pos1_kmer = test_str[p1-1:p1+k-1] #find \"translocation\" kmer-1 of this pair i a particular sequence of the alignment\n",
+        "          pos2_kmer = test_str[p2-1:p2+k-1] #find \"translocation\" kmer-2 of this pair i a particular sequence of the alignment\n",
+        "          pair = pos1_kmer + '_' + pos2_kmer #form a pair \n",
         "\n",
-        "            #undate state dictionary for currennt tarnnslocation pair with current sequece state\n",
+        "          #undate state dictionary for currennt tarnnslocation pair with current sequece state\n",
         "\n",
-        "            if state == '00': \n",
-        "              if pos1_kmer != kmer and pos2_kmer != kmer: #check '00' condition \n",
+        "          if state == '00': \n",
+        "            if pos1_kmer != kmer and pos2_kmer != kmer: #check '00' condition \n",
         "\n",
-        "                if pair in d_state.keys():\n",
-        "                  d_state[pair] += 1\n",
-        "                else:\n",
-        "                  d_state[pair] = 1  \n",
+        "              if pair in d_state.keys():\n",
+        "                d_state[pair] += 1\n",
+        "              else:\n",
+        "                d_state[pair] = 1  \n",
         "\n",
-        "            elif state == '11':\n",
-        "              if pos1_kmer == kmer and pos2_kmer == kmer: #check '11' condition\n",
+        "          elif state == '11':\n",
+        "            if pos1_kmer == kmer and pos2_kmer == kmer: #check '11' condition\n",
         "\n",
-        "                if pair in d_state.keys():\n",
-        "                  d_state[pair] +=1\n",
-        "                else:\n",
-        "                  d_state[pair] = 1\n",
+        "              if pair in d_state.keys():\n",
+        "                d_state[pair] +=1\n",
+        "              else:\n",
+        "                d_state[pair] = 1\n",
         "\n",
-        "            elif state == '01':\n",
-        "              if pos1_kmer != kmer and pos2_kmer == kmer: #check '01' condition\n",
+        "          elif state == '01':\n",
+        "            if pos1_kmer != kmer and pos2_kmer == kmer: #check '01' condition\n",
         "\n",
-        "                if pair in d_state.keys():\n",
-        "                  d_state[pair] +=1\n",
-        "                else:\n",
-        "                  d_state[pair] = 1\n",
+        "              if pair in d_state.keys():\n",
+        "                d_state[pair] +=1\n",
+        "              else:\n",
+        "                d_state[pair] = 1\n",
         "\n",
-        "            elif state == '10':\n",
-        "              if pos1_kmer == kmer and pos2_kmer != kmer: #check '10' condition\n",
+        "          elif state == '10':\n",
+        "            if pos1_kmer == kmer and pos2_kmer != kmer: #check '10' condition\n",
         "\n",
-        "                if pair in d_state.keys():\n",
-        "                  d_state[pair] +=1\n",
-        "                else:\n",
-        "                  d_state[pair] = 1\n",
+        "              if pair in d_state.keys():\n",
+        "                d_state[pair] +=1\n",
+        "              else:\n",
+        "                d_state[pair] = 1\n",
         "        \n",
         "\n",
         "      d_state_list.append(d_state) #add pair dictionary to the list of state dictionaries \n",
@@ -189,7 +189,7 @@
         "  df[col_name] = d_state_list #add column with dictionaries on particular state\n",
         "  return df"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -199,12 +199,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QqehcpWuhMkS",
-        "outputId": "1df701b6-e5e5-4c34-9c57-18020cc037f3"
+        "outputId": "9dc62ef3-a616-4cc2-d4ba-e7ae77e69639"
       },
       "source": [
         "#run add_dictionaries finction for all tables and states\n",
         "\n",
-        "file = '/content/drive/MyDrive/Translocations/H1N1_H3N2.1557.AA.aligned.1str.fasta'\n",
+        "file = '/content/drive/MyDrive/Translocations/H3N2_evolver.fasta'\n",
         "df_list_updated = [] #create an empty list for new dataframes\n",
         "\n",
         "for i in range(len(df_list)):\n",
@@ -218,7 +218,7 @@
         "\n",
         "  df_list_updated.append(d_new4)"
       ],
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,6 +244,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "fpmdg57ZDuv4"
+      },
+      "source": [
+        "# Opposite-taxon statistics"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PTKFrs42D2yE"
+      },
+      "source": [
+        "def"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "tvWYE4MOjVER"
       },
       "source": [
@@ -256,7 +276,7 @@
         "id": "x54nu_fCdvwl"
       },
       "source": [
-        "outfile = '/content/drive/MyDrive/Translocations/H1N1_H3N2_pdb_multiple_dictionaries.xlsx'\n",
+        "outfile = '/content/drive/MyDrive/Translocations/H3N2_evolver_stats_dictionaries.xlsx'\n",
         "# Create a Pandas Excel writer using XlsxWriter as the engine\n",
         "writer = pd.ExcelWriter(outfile, engine='xlsxwriter')\n",
         "\n",
@@ -269,7 +289,7 @@
         "# Close the Pandas Excel writer and output the Excel file\n",
         "writer.save()"
       ],
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": []
     }
   ]
